Convert simple clicker.js example to d3 OMG particles.

--- a/webserver/src/client/index.html
+++ b/webserver/src/client/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="click-field"></div>
+  <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="js/clicker.js"></script>
 </body>
 
